# playground

./: .gitattributes  .gitignore  .justfile  .treefmt.toml  README.md
dioxus/todo/: .gitignore  .justfile  .treefmt.toml  Cargo.toml
dioxus/todo/api/: README.md
dioxus/todo/api/src/: lib.rs
dioxus/todo/desktop/src/: main.rs
dioxus/todo/ui/src/: hero.rs  navbar.rs
dioxus/todo/web/src/: main.rs
dioxus/todo/web/src/views/: blog.rs  home.rs
rust/: rust-toolchain.toml
rust/dioxus/hot_dog/: .justfile  Cargo.toml
rust/dioxus/hot_dog/.cargo/: config.toml
rust/dioxus/hot_dog/assets/: main.css
rust/dioxus/hot_dog/assets/data/: dog.txt  dog_ceo_breeds.json
rust/dioxus/hot_dog/assets/styles/: dog.css  main.css
rust/dioxus/hot_dog/src/: dog.rs  error.rs  main.rs  prelude.rs  tmp.txt
rust/dioxus/hot_dog/src/app/: default.rs  main.rs  mod.rs
rust/dioxus/hot_dog/src/data/: default.rs  dog copy 2.rs  dog.rs  mod.rs
rust/dioxus/hot_dog/src/provider/: custom.rs  default.rs  dog_ceo.rs  mod.rs  prelude.rs
rust/dioxus/hot_dog/src/utils/: format.rs  log.rs  mod.rs
rust/dioxus/hot_dog/src/views/: carousel.rs  default.rs  dog.rs  footer.rs  header.rs
rust/dioxus/todo/: .justfile  README.md
rust/dioxus/todo/assets/: main.css
rust/dioxus/todo/desktop/: README.md
rust/dioxus/todo/mobile/: README.md
rust/dioxus/todo/mobile/src/: main.rs
rust/dioxus/todo/mobile/src/views/: mod.rs
rust/dioxus/todo/src/: main.rs
rust/dioxus/todo/ui/src/: echo.rs
rust/dioxus/todo/web/: README.md
